live host begins

--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -220,6 +220,12 @@
     bottom: 0;
     left: 0;
 }
+.choiceAlert:hover {
+    opacity: 0;
+}
+.choiceAlert {
+    background: blue;
+}
 
 .dark {
     --mainBg: 10, 8, 45;
