--- a/frontend/src/css/output.css
+++ b/frontend/src/css/output.css
@@ -667,9 +667,9 @@ html {
   }
 }
 
-@media (min-width: 660px) {
+@media (min-width: 680px) {
   .container {
-    max-width: 660px;
+    max-width: 680px;
   }
 }
 
@@ -731,6 +731,24 @@ html {
     justify-items: start;
     text-align: start;
   }
+}
+
+.avatar {
+  position: relative;
+  display: inline-flex;
+}
+
+.avatar > div {
+  display: block;
+  aspect-ratio: 1 / 1;
+  overflow: hidden;
+}
+
+.avatar img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .avatar.placeholder > div {
@@ -1173,6 +1191,14 @@ html {
   white-space: nowrap;
   gap: 0.5rem;
   padding: 1rem;
+}
+
+.avatar-group :where(.avatar) {
+  overflow: hidden;
+  border-radius: 9999px;
+  border-width: 4px;
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-border-opacity)));
 }
 
 .btm-nav > *.disabled,
@@ -1910,6 +1936,23 @@ html {
   right: 7%;
 }
 
+.avatar.offline:before {
+  content: "";
+  position: absolute;
+  z-index: 10;
+  display: block;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-bg-opacity)));
+  outline-style: solid;
+  outline-width: 2px;
+  outline-color: var(--fallback-b1,oklch(var(--b1)/1));
+  width: 15%;
+  height: 15%;
+  top: 7%;
+  right: 7%;
+}
+
 .join.join-vertical > :where(*:not(:first-child)) {
   margin-left: 0px;
   margin-right: 0px;
@@ -1966,8 +2009,8 @@ html {
   bottom: 0px;
 }
 
-.bottom-\[-10px\] {
-  bottom: -10px;
+.bottom-\[-12px\] {
+  bottom: -12px;
 }
 
 .bottom-\[-20px\] {
@@ -1992,6 +2035,10 @@ html {
 
 .left-3 {
   left: 0.75rem;
+}
+
+.left-\[-100px\] {
+  left: -100px;
 }
 
 .left-\[-45px\] {
@@ -2040,6 +2087,10 @@ html {
 
 .right-\[-10px\] {
   right: -10px;
+}
+
+.right-\[-12px\] {
+  right: -12px;
 }
 
 .right-\[-2px\] {
@@ -2159,6 +2210,10 @@ html {
   margin-top: -1.25rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .mb-14 {
   margin-bottom: 3.5rem;
 }
@@ -2205,6 +2260,10 @@ html {
 
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
 .mt-1 {
@@ -2259,6 +2318,10 @@ html {
   margin-top: 1px;
 }
 
+.mt-\[2px\] {
+  margin-top: 2px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -2273,6 +2336,10 @@ html {
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -2363,10 +2430,6 @@ html {
   height: 220px;
 }
 
-.h-\[24px\] {
-  height: 24px;
-}
-
 .h-\[25px\] {
   height: 25px;
 }
@@ -2431,6 +2494,10 @@ html {
   height: 100%;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .max-h-\[375px\] {
   max-height: 375px;
 }
@@ -2465,6 +2532,10 @@ html {
 
 .min-h-8 {
   min-height: 2rem;
+}
+
+.min-h-\[250px\] {
+  min-height: 250px;
 }
 
 .min-h-\[400px\] {
@@ -2555,12 +2626,8 @@ html {
   width: 180px;
 }
 
-.w-\[24px\] {
-  width: 24px;
-}
-
-.w-\[25px\] {
-  width: 25px;
+.w-\[200px\] {
+  width: 200px;
 }
 
 .w-\[300px\] {
@@ -2607,8 +2674,100 @@ html {
   width: 65px;
 }
 
+.w-auto {
+  width: auto;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
+.w-64 {
+  width: 16rem;
+}
+
+.w-\[245px\] {
+  width: 245px;
+}
+
+.w-\[255px\] {
+  width: 255px;
+}
+
+.w-\[270px\] {
+  width: 270px;
+}
+
+.w-\[280px\] {
+  width: 280px;
+}
+
+.w-\[278px\] {
+  width: 278px;
+}
+
+.w-\[279px\] {
+  width: 279px;
+}
+
+.w-\[283px\] {
+  width: 283px;
+}
+
+.w-\[285px\] {
+  width: 285px;
+}
+
+.w-\[287px\] {
+  width: 287px;
+}
+
+.w-\[288px\] {
+  width: 288px;
+}
+
+.w-\[290px\] {
+  width: 290px;
+}
+
+.w-\[295px\] {
+  width: 295px;
+}
+
+.w-\[310px\] {
+  width: 310px;
+}
+
+.w-\[260px\] {
+  width: 260px;
+}
+
+.w-\[265px\] {
+  width: 265px;
+}
+
+.w-\[262px\] {
+  width: 262px;
+}
+
+.w-\[263px\] {
+  width: 263px;
+}
+
+.w-\[264px\] {
+  width: 264px;
+}
+
+.w-\[70px\] {
+  width: 70px;
 }
 
 .min-w-16 {
@@ -2637,6 +2796,10 @@ html {
 
 .min-w-full {
   min-width: 100%;
+}
+
+.min-w-\[280px\] {
+  min-width: 280px;
 }
 
 .max-w-16 {
@@ -2683,6 +2846,14 @@ html {
   max-width: 100%;
 }
 
+.max-w-\[280px\] {
+  max-width: 280px;
+}
+
+.max-w-\[285px\] {
+  max-width: 285px;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -2727,6 +2898,11 @@ html {
 
 .resize-none {
   resize: none;
+}
+
+.columns-3 {
+  -moz-columns: 3;
+       columns: 3;
 }
 
 .flex-col {
@@ -2917,6 +3093,10 @@ html {
   border-width: 3px;
 }
 
+.border-\[5px\] {
+  border-width: 5px;
+}
+
 .border-b {
   border-bottom-width: 1px;
 }
@@ -2978,12 +3158,22 @@ html {
   border-color: rgb(var(--gray-two));
 }
 
+.border-green-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(134 239 172 / var(--tw-border-opacity));
+}
+
 .border-lightGray {
   border-color:  rgb(var(--light-gray));
 }
 
 .border-mainBg {
   border-color: rgb(var(--mainBg));
+}
+
+.border-red-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(252 165 165 / var(--tw-border-opacity));
 }
 
 .border-red-600 {
@@ -3012,6 +3202,10 @@ html {
   background-color: #ff000081;
 }
 
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
+  background-color: rgba(0,0,0,0.3);
+}
+
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.4\)\] {
   background-color: rgba(0,0,0,0.4);
 }
@@ -3022,6 +3216,14 @@ html {
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.59\)\] {
   background-color: rgba(0,0,0,0.59);
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.6\)\] {
+  background-color: rgba(0,0,0,0.6);
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.9\)\] {
+  background-color: rgba(0,0,0,0.9);
 }
 
 .bg-\[rgba\(0\2c 255\2c 0\2c 0\.6\)\] {
@@ -3127,9 +3329,9 @@ html {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-700 {
+.bg-yellow-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(161 98 7 / var(--tw-bg-opacity));
+  background-color: rgb(202 138 4 / var(--tw-bg-opacity));
 }
 
 .object-contain {
@@ -3166,6 +3368,10 @@ html {
   padding: 1.25rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .p-\[2px\] {
   padding: 2px;
 }
@@ -3176,6 +3382,10 @@ html {
 
 .p-\[7px\] {
   padding: 7px;
+}
+
+.p-7 {
+  padding: 1.75rem;
 }
 
 .px-1 {
@@ -3233,6 +3443,11 @@ html {
   padding-right: 10px;
 }
 
+.px-\[2px\] {
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
 .px-\[35px\] {
   padding-left: 35px;
   padding-right: 35px;
@@ -3278,6 +3493,21 @@ html {
   padding-bottom: 100px;
 }
 
+.py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.py-\[13px\] {
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
+
+.py-\[1px\] {
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
 .py-\[7px\] {
   padding-top: 7px;
   padding-bottom: 7px;
@@ -3288,8 +3518,17 @@ html {
   padding-bottom: 9px;
 }
 
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .pb-2 {
@@ -3380,12 +3619,16 @@ html {
   padding-top: 1.25rem;
 }
 
-.pt-\[17px\] {
-  padding-top: 17px;
+.pt-\[61px\] {
+  padding-top: 61px;
 }
 
 .pt-\[65px\] {
   padding-top: 65px;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .text-left {
@@ -3417,11 +3660,6 @@ html {
 
 .text-5xl {
   font-size: 3rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -3502,6 +3740,10 @@ html {
   font-size: 3px;
 }
 
+.text-\[40px\] {
+  font-size: 40px;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -3579,24 +3821,19 @@ html {
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
-.text-green-700 {
-  --tw-text-opacity: 1;
-  color: rgb(21 128 61 / var(--tw-text-opacity));
-}
-
 .text-orange-500 {
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
+.text-red-300 {
+  --tw-text-opacity: 1;
+  color: rgb(252 165 165 / var(--tw-text-opacity));
+}
+
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
 }
 
 .text-shinyPurple {
@@ -3612,21 +3849,16 @@ html {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-yellow-700 {
-  --tw-text-opacity: 1;
-  color: rgb(161 98 7 / var(--tw-text-opacity));
-}
-
 .opacity-0 {
   opacity: 0;
 }
 
-.opacity-\[0\.5\] {
-  opacity: 0.5;
+.opacity-\[0\.4\] {
+  opacity: 0.4;
 }
 
-.opacity-\[0\.7\] {
-  opacity: 0.7;
+.opacity-\[0\.5\] {
+  opacity: 0.5;
 }
 
 .shadow {
@@ -3711,13 +3943,33 @@ html {
   opacity: 0.3;
 }
 
-@media (min-width: 660px) {
+@media (min-width: 680px) {
   .smd\:max-w-\[580px\] {
     max-width: 580px;
+  }
+
+  .smd\:flex-row {
+    flex-direction: row;
+  }
+
+  .smd\:items-start {
+    align-items: flex-start;
+  }
+
+  .smd\:justify-between {
+    justify-content: space-between;
+  }
+
+  .smd\:gap-8 {
+    gap: 2rem;
   }
 }
 
 @media (min-width: 768px) {
+  .md\:left-0 {
+    left: 0px;
+  }
+
   .md\:left-\[180px\] {
     left: 180px;
   }
@@ -3754,10 +4006,6 @@ html {
     width: 180px;
   }
 
-  .md\:w-\[50\%\] {
-    width: 50%;
-  }
-
   .md\:min-w-24 {
     min-width: 6rem;
   }
@@ -3774,20 +4022,12 @@ html {
     max-width: 75%;
   }
 
-  .md\:flex-row {
-    flex-direction: row;
-  }
-
   .md\:items-start {
     align-items: flex-start;
   }
 
   .md\:justify-center {
     justify-content: center;
-  }
-
-  .md\:justify-between {
-    justify-content: space-between;
   }
 
   .md\:gap-2 {
@@ -3800,6 +4040,14 @@ html {
 
   .md\:gap-\[97px\] {
     gap: 97px;
+  }
+
+  .md\:overflow-hidden {
+    overflow: hidden;
+  }
+
+  .md\:overflow-x-auto {
+    overflow-x: auto;
   }
 
   .md\:overflow-y-auto {
@@ -3862,6 +4110,10 @@ html {
     width: 350px;
   }
 
+  .slg\:w-\[50\%\] {
+    width: 50%;
+  }
+
   .slg\:max-w-full {
     max-width: 100%;
   }
@@ -3872,6 +4124,10 @@ html {
 
   .slg\:border-l {
     border-left-width: 1px;
+  }
+
+  .slg\:bg-transparent {
+    background-color: transparent;
   }
 
   .slg\:pr-10 {
