--- a/frontend/src/css/output.css
+++ b/frontend/src/css/output.css
@@ -2492,6 +2492,14 @@ html {
   margin-top: 6px;
 }
 
+.mt-\[3px\] {
+  margin-top: 3px;
+}
+
+.mt-\[8px\] {
+  margin-top: 8px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
